examples/test/testpolicy9223.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9223
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key13: value18
      key49: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value4
          key42: value13
          key9: value3
      podSelector:
        matchLabels:
          key4: value19
          key18: value40
